bk_ida/gccida/g2/do_jump_by_parts_equality_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10316:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+4h] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10319:30: error: invalid suffix 'xmode' on integer constant
v5 = gen_reg_rtx( *(short *)0xmode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10320:30: error: invalid suffix 'orce' on integer constant
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10320:46: error: use of undeclared identifier 'machine_mode'
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10320:6: error: use of undeclared identifier 'operand_sub'
v6 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10330:30: error: invalid suffix 'orce' on integer constant
v9 = operand_sub*(short *)0xforce( op0, v8, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10330:47: error: use of undeclared identifier 'machine_mode'
v9 = operand_sub*(short *)0xforce( op0, v8, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10330:6: error: use of undeclared identifier 'operand_sub'
v9 = operand_sub*(short *)0xforce( op0, v8, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10331:32: error: invalid suffix 'xmode' on integer constant
v10 = expand_binop( *(short *)0xmode, optab_table[19], v5, v9, v5, 1, OPTAB_WIDEN); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10341:67: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v5, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_label, if_true_label); 
                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10358:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10359:31: error: invalid suffix 'orce' on integer constant
v14 = operand_sub*(short *)0xforce( op0, v12, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10359:49: error: use of undeclared identifier 'machine_mode'
v14 = operand_sub*(short *)0xforce( op0, v12, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/expr.c:10359:7: error: use of undeclared identifier 'operand_sub'
v14 = operand_sub*(short *)0xforce( op0, v12, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
      ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_equality_rtx/src/obj/expr.o] Error 1
